<package>
  <name>ccny_rgbd</name>
  <version>0.1.0</version>
  <description>Ros applications for fast visual odometry and mapping from RGB-D data, built on top of the rgbdtools library.</description>
  <maintainer email="ivan.dryanovski@gmail.com">Ivan Dryanovski</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/ccny_rgbd</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ivan Dryanovski</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>lib_rgbdtools</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>lib_rgbdtools</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>pcl_ros</test_depend> -->
  <!-- <test_depend>nav_msgs</test_depend> -->
  <!-- <test_depend>std_srvs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->
  <!-- <test_depend>cv_bridge</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>image_transport</test_depend> -->
  <!-- <test_depend>image_geometry</test_depend> -->
  <!-- <test_depend>nodelet</test_depend> -->
  <!-- <test_depend>lib_rgbdtools</test_depend> -->

<export>
    <cpp lflags="-L${prefix}/lib/ -Wl,-rpath,${prefix}/lib -lros" cflags="-I${prefix}/include -I${prefix}/cfg/cpp"/>
    <nodelet plugin="${prefix}/nodelets/rgbd_image_proc_nodelet.xml"/>
</export>

</package>
