<package>
  <name>ccny_rgbd_data</name>
  <version>0.1.0</version>
  <description>Auxiliary data files for ccny_rgbd: calibration files, test sequences, etc.</description>
  <maintainer email="ivan.dryanovski@gmail.com">Ivan Dryanovski</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/ccny_rgbd_data</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ivan Dryanovski</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

</package>
