<package>
  <name>ccny_rgbd_tools</name>
  <version>0.1.0</version>
  <description>A collection of tools for working with RGB-D camera data developed at the CCNY Robotics Lab</description>
  <maintainer email="ivan.dryanovski@gmail.com">Maintained by Ivan Dryanovski</maintainer>

  <license>GPL</license>
  <license>LGPLv3</license>

  <url type="website">http://ros.org/wiki/ccny_rgbd_tools</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Maintained by Ivan Dryanovski</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>ccny_openni_launch</run_depend>
  <run_depend>ccny_rgbd</run_depend>
  <run_depend>lib_rgbdtools</run_depend>

  <!-- Dependencies needed only for running tests. -->







</package>
