<package>
  <name>lib_rgbdtools</name>
  <version>0.1.0</version>
  <description>Local install of rgbdtools library.</description>
  <maintainer email="ivan.dryanovski@gmail.com">Ivan Dryanovski</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/lib_rgbdtools</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ivan Dryanovski</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>suitesparse</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>suitesparse</run_depend>
 <!--
<export>
    <cpp lflags="-L${prefix}/lib/" cflags="-I${prefix}/include"/>
</export>-->

</package>
